syntax = "proto3";

package ockam.api;

message Request {
    uint64 id     = 1;
    string path   = 2;
    Method method = 3;
    bytes  body   = 4;
}

message Response {
    uint64 id     = 1;
    uint64 re     = 2;
    Status status = 3;
    bytes  body   = 4;
}

message Error {
    string path    = 1;
    string message = 2;
}

enum Method {
    GET    = 0;
    POST   = 1;
    PUT    = 2;
    DELETE = 3;
    PATCH  = 4;
}

enum Status {
    OK                    = 0;
    BAD_REQUEST           = 1;
    NOT_FOUND             = 2;
    METHOD_NOT_ALLOWED    = 3;
    INTERNAL_SERVER_ERROR = 4;
    NOT_IMPLEMENTED       = 5;
}
